create reference and database

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,11 @@
 HTTP_ACTIVE=true
 HTTP_PORT=3000
+
+MYSQL_PORT=3306
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_SCHEMA=hexagonal
+MYSQL_DEBUG=false
+MYSQL_POOL_MIN=1
+MYSQL_POOL_MAX=2
