--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "knex": "^0.21.12",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "ramda": "^0.27.1",
+    "uuid-converter": "^1.1.1"
   }
 }
