--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
+    "http-status-codes": "^2.1.4",
+    "joi": "^17.3.0",
     "knex": "^0.21.12",
     "mysql2": "^2.2.5",
     "ramda": "^0.27.1",
