--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "migrate:up": "./node_modules/knex/bin/cli.js migrate:latest --env local"
+    "migrate:up": "./node_modules/knex/bin/cli.js migrate:latest --env local",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -29,16 +30,22 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@jest/transform": "^26.6.2",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.9",
     "body-parser": "^1.19.0",
+    "chance": "^1.1.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "http-status-codes": "^2.1.4",
+    "jest-express": "^1.12.0",
     "joi": "^17.3.0",
     "knex": "^0.21.12",
     "mysql2": "^2.2.5",
     "ramda": "^0.27.1",
+    "ts-jest": "^26.4.4",
     "uuid-converter": "^1.1.1"
   }
 }
