--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "migrate:up": "./node_modules/knex/bin/cli.js migrate:latest --env local",
-    "test": "jest"
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
   },
   "repository": {
     "type": "git",
@@ -20,12 +20,17 @@
   },
   "homepage": "https://github.com/marqueswsm/seed-typescript-hexagonal#readme",
   "devDependencies": {
+    "@types/eslint": "^7.2.5",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
